--- a/src/main/resources/templates/mbti/test/questions.html
+++ b/src/main/resources/templates/mbti/test/questions.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-        <html xmlns:th="http://www.thymeleaf.org">
-        <head lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="en">
 
-            <title>Spring Framework Guru</title>
+    <title>MBTI TESTER</title>
 
-        </head>
+</head>
 <body>
 <h1>Welcome To Your Myers-Briggs Type Indicator Test</h1>
 
 <div fragment="content">
     <form action="#" th:action="@{/getResults}" th:object="${post}" method="post">
-    <!--<form name="mbtiTest" th:action="@{/getResults}" method="POST">-->
+        <!--<form name="mbtiTest" th:action="@{/getResults}" method="POST">-->
         <fieldset>
             <legend>Please answer the following questions:</legend>
             <table class="table table-striped">
@@ -18,22 +18,34 @@
                     <td th:text="${mbti.id}"><a href="/mbti/${mbti.id}">Id</a></td>
                     <td th:text="${mbti.question}">question</td>
                 </tr>
-            </table><div>
-            <button id="actionButton" type="button" onclick="displayApplicationName();">Get Application name</button>
-            <br/><br/>
-            <span id="displaySpan">Application name : </span>
-        </div>
+            </table>
+            <div>
+                    <p><b>Question 1</b> This is the first question?</p>
+                        <button type="radio" name="question1" value="EXTROVERSION" style="border: none;">Yes</button>
+                            <button type="radio" name="question1" value="INTROVERSION" style="border: none;">No</button>
 
-            <!--<input type="radio" name="yes" value="true">Yes<br>-->
-            <!--<input type="radio" name="no" value="false">No<br>-->
+                    <p><b>Question 2</b> This is the second question?</p>
+                        <button type="radio" name="question2" value="EXTROVERSION" style="border: none;">Yes</button>
+                            <button type="radio" name="question2" value="INTROVERSION" style="border: none;">No</button>
+                    <!--<input type="radio" name="direction" value="EXTROVERSION" >-->
+                    <!--<input type="radio" name="direction" value="INTROVERSION" >-->
+                    <!--<input type="radio" name="observation" value="SENSING" >-->
+                    <!--<input type="radio" name="observation" value="INTUITION" >-->
+                    <!--<input type="radio" name="orientation" value="SENSING" >-->
+                    <!--<input type="radio" name="orientation" value="THINKING" >-->
+                    <!--<input type="radio" name="orientation" value="FEELING" >-->
+                    <!--<input type="radio" name="assertion" value="PERCEIVING" >-->
+                    <!--<input type="radio" name="assertion" value="JUDGING" >-->
+            </div>
             <button type="submit" class="btn">submit</button>
         </fieldset>
     </form>
 </div>
 
-<footer class="footer" style="position: absolute; padding-top:0; padding-bottom:0; bottom:0; background-color: #f5f5f5;">
+<footer class="footer"
+        style="position: absolute; padding-top:0; padding-bottom:0; bottom:0; background-color: #f5f5f5;">
     <div class="container">
-    <p th:text="${#dates.format(datetime, 'dd MMM yyyy HH:mm')}" class="text-muted">Page was rendered today.</p>
+        <p th:text="${#dates.format(datetime, 'dd MMM yyyy HH:mm')}" class="text-muted">Page was rendered today.</p>
     </div>
 
 </footer>
