--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
+    <title th:text="#{index.page.title}">mbti</title>
 
     <link rel="shortcut icon" href="../static/images/MBTIUnicorn.png"
           th:href="@{images/MBTIUnicorn.png}" type="image/x-icon"/>
