--- a/src/main/resources/templates/mbti/test/questions.html
+++ b/src/main/resources/templates/mbti/test/questions.html
@@ -41,68 +41,68 @@
             <div>
                 <p><b>Question 1</b> Q1</p>
                 <output th:type="text" th:name="Question1"></output>
-                <input type="radio" name="Direction" value="EXTROVERSION" style="border: none;">Yes</input>
-                <input type="radio" name="Direction" value="INTROVERSION" style="border: none;">No</input>
+                <input type="radio" name="q1" value="EXTROVERSION" style="border: none;">Yes</input>
+                <input type="radio" name="q1" value="INTROVERSION" style="border: none;">No</input>
                 <p><b>Question 2</b> Q2</p>
-                <input type="radio" name="Direction" value="EXTROVERSION" style="border: none;">Yes</input>
-                <input type="radio" name="Direction" value="INTROVERSION" style="border: none;">No</input>
+                <input type="radio" name="q2" value="EXTROVERSION" style="border: none;">Yes</input>
+                <input type="radio" name="q2" value="INTROVERSION" style="border: none;">No</input>
                 <p><b>Question 3</b> Q3?</p>
-                <input type="radio" name="Direction" value="EXTROVERSION" style="border: none;">Yes</input>
-                <input type="radio" name="Direction" value="INTROVERSION" style="border: none;">No</input>
+                <input type="radio" name="q3" value="EXTROVERSION" style="border: none;">Yes</input>
+                <input type="radio" name="q3" value="INTROVERSION" style="border: none;">No</input>
                 <p><b>Question 4</b> Q4</p>
-                <input type="radio" name="Direction" value="INTROVERSION" style="border: none;">Yes</input>
-                <input type="radio" name="Direction" value="EXTROVERSION" style="border: none;">No</input>
+                <input type="radio" name="q4" value="INTROVERSION" style="border: none;">Yes</input>
+                <input type="radio" name="q4" value="EXTROVERSION" style="border: none;">No</input>
                 <p><b>Question 5</b> Q5</p>
-                <input type="radio" name="Direction" value="INTROVERSION" style="border: none;">Yes</input>
-                <input type="radio" name="Direction" value="EXTROVERSION" style="border: none;">No</input>
+                <input type="radio" name="q5" value="INTROVERSION" style="border: none;">Yes</input>
+                <input type="radio" name="q5" value="EXTROVERSION" style="border: none;">No</input>
 
                 <p><b>Question 6</b> Q5</p>
-                <input type="radio" name="Observation" value="SENSING" style="border: none;">Yes</input>
-                <input type="radio" name="Observation" value="INTUITION" style="border: none;">No</input>
+                <input type="radio" name="q6" value="SENSING" style="border: none;">Yes</input>
+                <input type="radio" name="q6" value="INTUITION" style="border: none;">No</input>
                 <p><b>Question 7</b> Q7</p>
-                <input type="radio" name="Observation" value="SENSING" style="border: none;">Yes</input>
-                <input type="radio" name="Observation" value="INTUITION" style="border: none;">No</input>
+                <input type="radio" name="q7" value="SENSING" style="border: none;">Yes</input>
+                <input type="radio" name="q7" value="INTUITION" style="border: none;">No</input>
                 <p><b>Question 8</b> Q8</p>
-                <input type="radio" name="Observation" value="SENSING" style="border: none;">Yes</input>
-                <input type="radio" name="Observation" value="INTUITION" style="border: none;">No</input>
+                <input type="radio" name="q8" value="SENSING" style="border: none;">Yes</input>
+                <input type="radio" name="q8" value="INTUITION" style="border: none;">No</input>
                 <p><b>Question 9</b> Q9</p>
-                <input type="radio" name="Observation" value="INTUITION" style="border: none;">Yes</input>
-                <input type="radio" name="Observation" value="SENSING" style="border: none;">No</input>
+                <input type="radio" name="q9" value="INTUITION" style="border: none;">Yes</input>
+                <input type="radio" name="q9" value="SENSING" style="border: none;">No</input>
                 <p><b>Question 10</b> Q10</p>
-                <input type="radio" name="Observation" value="INTUITION" style="border: none;">Yes</input>
-                <input type="radio" name="Observation" value="SENSING" style="border: none;">No</input>
+                <input type="radio" name="q10" value="INTUITION" style="border: none;">Yes</input>
+                <input type="radio" name="q10" value="SENSING" style="border: none;">No</input>
 
                 <p><b>Question 11</b> Q11</p>
-                <input type="radio" name="Orientation" value="THINKING" style="border: none;">Yes</input>
-                <input type="radio" name="Orientation" value="FEELING" style="border: none;">No</input>
+                <input type="radio" name="q11" value="THINKING" style="border: none;">Yes</input>
+                <input type="radio" name="q11" value="FEELING" style="border: none;">No</input>
                 <p><b>Question 12</b> Q12</p>
-                <input type="radio" name="Orientation" value="THINKING" style="border: none;">Yes</input>
-                <input type="radio" name="Orientation" value="FEELING" style="border: none;">No</input>
+                <input type="radio" name="q12" value="THINKING" style="border: none;">Yes</input>
+                <input type="radio" name="q12" value="FEELING" style="border: none;">No</input>
                 <p><b>Question 13</b> Q13</p>
-                <input type="radio" name="Orientation" value="THINKING" style="border: none;">Yes</input>
-                <input type="radio" name="Orientation" value="FEELING" style="border: none;">No</input>
+                <input type="radio" name="q13" value="THINKING" style="border: none;">Yes</input>
+                <input type="radio" name="q13" value="FEELING" style="border: none;">No</input>
                 <p><b>Question 14</b> Q14</p>
-                <input type="radio" name="Orientation" value="FEELING" style="border: none;">Yes</input>
-                <input type="radio" name="Orientation" value="THINKING" style="border: none;">No</input>
+                <input type="radio" name="q14" value="FEELING" style="border: none;">Yes</input>
+                <input type="radio" name="q14" value="THINKING" style="border: none;">No</input>
                 <p><b>Question 15</b> Q15</p>
-                <input type="radio" name="Orientation" value="FEELING" style="border: none;">Yes</input>
-                <input type="radio" name="Orientation" value="THINKING" style="border: none;">No</input>
+                <input type="radio" name="q15" value="FEELING" style="border: none;">Yes</input>
+                <input type="radio" name="q15" value="THINKING" style="border: none;">No</input>
 
                 <p><b>Question 16</b> Q16</p>
-                <input type="radio" name="Assertion" value="PERCEIVING" style="border: none;">Yes</input>
-                <input type="radio" name="Assertion" value="JUDGING" style="border: none;">No</input>
+                <input type="radio" name="q16" value="PERCEIVING" style="border: none;">Yes</input>
+                <input type="radio" name="q16" value="JUDGING" style="border: none;">No</input>
                 <p><b>Question 17</b> Q17</p>
-                <input type="radio" name="Assertion" value="PERCEIVING" style="border: none;">Yes</input>
-                <input type="radio" name="Assertion" value="JUDGING" style="border: none;">No</input>
+                <input type="radio" name="q17" value="PERCEIVING" style="border: none;">Yes</input>
+                <input type="radio" name="q17" value="JUDGING" style="border: none;">No</input>
                 <p><b>Question 18</b> Q18</p>
-                <input type="radio" name="Assertion" value="PERCEIVING" style="border: none;">Yes</input>
-                <input type="radio" name="Assertion" value="JUDGING" style="border: none;">No</input>
+                <input type="radio" name="q18" value="PERCEIVING" style="border: none;">Yes</input>
+                <input type="radio" name="q18" value="JUDGING" style="border: none;">No</input>
                 <p><b>Question 19</b> Q19</p>
-                <input type="radio" name="Assertion" value="JUDGING" style="border: none;">Yes</input>
-                <input type="radio" name="Assertion" value="PERCEIVING" style="border: none;">No</input>
+                <input type="radio" name="q19" value="JUDGING" style="border: none;">Yes</input>
+                <input type="radio" name="q19" value="PERCEIVING" style="border: none;">No</input>
                 <p><b>Question 20</b> Q20</p>
-                <input type="radio" name="Assertion" value="JUDGING" style="border: none;">Yes</input>
-                <input type="radio" name="Assertion" value="PERCEIVING" style="border: none;">No</input>
+                <input type="radio" name="q20" value="JUDGING" style="border: none;">Yes</input>
+                <input type="radio" name="q20" value="PERCEIVING" style="border: none;">No</input>
 
             </div>
             <button type="submit" class="btn">submit</button>
