--- a/src/main/resources/templates/mbti/test/questions.html
+++ b/src/main/resources/templates/mbti/test/questions.html
@@ -111,13 +111,13 @@
             <button type="submit" class="btn">submit</button>
         </fieldset>
     </form>
-    <form name="theFormName">
-        <input type="radio" name="theRadioGroupName" value="10">
-        <input type="radio" name="theRadioGroupName" value="20">
-        <input type="radio" name="theRadioGroupName" value="30">
-        <input type="radio" name="theRadioGroupName" value="40">
-        <input type="button" value="Check" onclick="getRadioValue('Q1', 'Q2', 'Q3', 'Q4', 'Q5')">
-    </form>
+    <!--<form name="theFormName">-->
+        <!--<input type="radio" name="theRadioGroupName" value="10">-->
+        <!--<input type="radio" name="theRadioGroupName" value="20">-->
+        <!--<input type="radio" name="theRadioGroupName" value="30">-->
+        <!--<input type="radio" name="theRadioGroupName" value="40">-->
+        <!--<input type="button" value="Check" onclick="getRadioValue('Q1', 'Q2', 'Q3', 'Q4', 'Q5')">-->
+    <!--</form>-->
 
     <script>
         function getRadioValue(valueName) {
