--- a/src/main/resources/templates/mbti/test/questions.html
+++ b/src/main/resources/templates/mbti/test/questions.html
@@ -56,55 +56,55 @@
                 <input type="radio" name="q5" value="I" style="border: none;">Yes</input>
                 <input type="radio" name="q5" value="E" style="border: none;">No</input>
 
-                <p><b>Question 6</b> Q5</p>
-                <input type="radio" name="q6" value="S" style="border: none;">Yes</input>
-                <input type="radio" name="q6" value="I" style="border: none;">No</input>
-                <p><b>Question 7</b> Q7</p>
-                <input type="radio" name="q7" value="S" style="border: none;">Yes</input>
-                <input type="radio" name="q7" value="I" style="border: none;">No</input>
-                <p><b>Question 8</b> Q8</p>
-                <input type="radio" name="q8" value="S" style="border: none;">Yes</input>
-                <input type="radio" name="q8" value="I" style="border: none;">No</input>
-                <p><b>Question 9</b> Q9</p>
-                <input type="radio" name="q9" value="I" style="border: none;">Yes</input>
-                <input type="radio" name="q9" value="S" style="border: none;">No</input>
-                <p><b>Question 10</b> Q10</p>
-                <input type="radio" name="q10" value="I" style="border: none;">Yes</input>
-                <input type="radio" name="q10" value="S" style="border: none;">No</input>
+                <!--<p><b>Question 6</b> Q5</p>-->
+                <!--<input type="radio" name="q6" value="S" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q6" value="I" style="border: none;">No</input>-->
+                <!--<p><b>Question 7</b> Q7</p>-->
+                <!--<input type="radio" name="q7" value="S" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q7" value="I" style="border: none;">No</input>-->
+                <!--<p><b>Question 8</b> Q8</p>-->
+                <!--<input type="radio" name="q8" value="S" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q8" value="I" style="border: none;">No</input>-->
+                <!--<p><b>Question 9</b> Q9</p>-->
+                <!--<input type="radio" name="q9" value="I" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q9" value="S" style="border: none;">No</input>-->
+                <!--<p><b>Question 10</b> Q10</p>-->
+                <!--<input type="radio" name="q10" value="I" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q10" value="S" style="border: none;">No</input>-->
 
-                <p><b>Question 11</b> Q11</p>
-                <input type="radio" name="q11" value="T" style="border: none;">Yes</input>
-                <input type="radio" name="q11" value="F" style="border: none;">No</input>
-                <p><b>Question 12</b> Q12</p>
-                <input type="radio" name="q12" value="T" style="border: none;">Yes</input>
-                <input type="radio" name="q12" value="F" style="border: none;">No</input>
-                <p><b>Question 13</b> Q13</p>
-                <input type="radio" name="q13" value="T" style="border: none;">Yes</input>
-                <input type="radio" name="q13" value="F" style="border: none;">No</input>
-                <p><b>Question 14</b> Q14</p>
-                <input type="radio" name="q14" value="F" style="border: none;">Yes</input>
-                <input type="radio" name="q14" value="T" style="border: none;">No</input>
-                <p><b>Question 15</b> Q15</p>
-                <input type="radio" name="q15" value="F" style="border: none;">Yes</input>
-                <input type="radio" name="q15" value="T" style="border: none;">No</input>
+                <!--<p><b>Question 11</b> Q11</p>-->
+                <!--<input type="radio" name="q11" value="T" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q11" value="F" style="border: none;">No</input>-->
+                <!--<p><b>Question 12</b> Q12</p>-->
+                <!--<input type="radio" name="q12" value="T" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q12" value="F" style="border: none;">No</input>-->
+                <!--<p><b>Question 13</b> Q13</p>-->
+                <!--<input type="radio" name="q13" value="T" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q13" value="F" style="border: none;">No</input>-->
+                <!--<p><b>Question 14</b> Q14</p>-->
+                <!--<input type="radio" name="q14" value="F" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q14" value="T" style="border: none;">No</input>-->
+                <!--<p><b>Question 15</b> Q15</p>-->
+                <!--<input type="radio" name="q15" value="F" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q15" value="T" style="border: none;">No</input>-->
 
-                <p><b>Question 16</b> Q16</p>
-                <input type="radio" name="q16" value="P" style="border: none;">Yes</input>
-                <input type="radio" name="q16" value="J" style="border: none;">No</input>
-                <p><b>Question 17</b> Q17</p>
-                <input type="radio" name="q17" value="P" style="border: none;">Yes</input>
-                <input type="radio" name="q17" value="J" style="border: none;">No</input>
-                <p><b>Question 18</b> Q18</p>
-                <input type="radio" name="q18" value="P" style="border: none;">Yes</input>
-                <input type="radio" name="q18" value="J" style="border: none;">No</input>
-                <p><b>Question 19</b> Q19</p>
-                <input type="radio" name="q19" value="J" style="border: none;">Yes</input>
-                <input type="radio" name="q19" value="P" style="border: none;">No</input>
-                <p><b>Question 20</b> Q20</p>
-                <input type="radio" name="q20" value="J" style="border: none;">Yes</input>
-                <input type="radio" name="q20" value="P" style="border: none;">No</input>
-                <br/>
-                <input type="button" value="Check" onclick="getRadioValue('Q1', 'Q2', 'Q3', 'Q4', 'Q5')">
+                <!--<p><b>Question 16</b> Q16</p>-->
+                <!--<input type="radio" name="q16" value="P" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q16" value="J" style="border: none;">No</input>-->
+                <!--<p><b>Question 17</b> Q17</p>-->
+                <!--<input type="radio" name="q17" value="P" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q17" value="J" style="border: none;">No</input>-->
+                <!--<p><b>Question 18</b> Q18</p>-->
+                <!--<input type="radio" name="q18" value="P" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q18" value="J" style="border: none;">No</input>-->
+                <!--<p><b>Question 19</b> Q19</p>-->
+                <!--<input type="radio" name="q19" value="J" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q19" value="P" style="border: none;">No</input>-->
+                <!--<p><b>Question 20</b> Q20</p>-->
+                <!--<input type="radio" name="q20" value="J" style="border: none;">Yes</input>-->
+                <!--<input type="radio" name="q20" value="P" style="border: none;">No</input>-->
+                <!--<br/>-->
+                <!--<input type="button" value="Check" onclick="getRadioValue('Q1', 'Q2', 'Q3', 'Q4', 'Q5')">-->
 
             </div>
             <!--<button type="button" name="getVal">Get Value of Selected</button>-->
@@ -123,6 +123,7 @@
         function getRadioValue(valueName) {
             var radios = theFormName.elements[valueName];
             window.rdValue; // declares the global variable 'rdValue'
+
             if (rdValue == E || rdValue == I)
                  var e, i;
             {
@@ -134,7 +135,7 @@
                 }
                 if (e>i) {
                     alert('E')
-                    //                    alert is wrong replace with string
+
                 }else alert('I');
             }
             //todo add result EorI to String X
